--- a/tests/index.html
+++ b/tests/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- 1. Load webcomponents-lite.min.js for polyfill support. -->
-    <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
     <!-- 2. Use an HTML Import to bring in some elements. -->
     <!-- <link href="../elements/diverge-app.html" rel="import"> -->
     <link href="../elements/ki-app.html" rel="import">
