--- a/elements/diverge/diverge-app.html
+++ b/elements/diverge/diverge-app.html
@@ -69,14 +69,14 @@
 		height: 89.5vh;
 	}
 
-	#diverges {
+	/*#diverges {
 		overflow-y: scroll;
         -webkit-overflow-scrolling: touch;
         @apply(--layout-horizontal);
 
         @apply(--layout-around-justified);
         @apply(--layout-wrap);
-	}
+	}*/
 
     firebase-collection {
         height: 0;
@@ -84,11 +84,11 @@
         display: none;
     }
 
-    @media (max-width:1279px) {
+    /*@media (max-width:1279px) {
         #diverges {
             @apply(--layout-block);
         }
-    }
+    }*/
 
 	paper-fab {
 	    position: absolute;
