--- a/elements/converge/converge-app.html
+++ b/elements/converge/converge-app.html
@@ -306,9 +306,9 @@ Polymer({
         //     // this.sortCount = 0;
         // }
         if (this.showCompile) {
-            this.divergesOrd = this.divergesOrd.slice().reverse();
+            // this.divergesOrd = this.divergesOrd.slice().reverse();
         }
-        
+
     },
     postDiverge: function(e) {  // Add a new task
         var tsk = this.$.dIdea.value;
